--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "leaflet": "^1.6.0",
     "nice-try": "^2.0.1",
+    "novelcovid": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-leaflet": "^2.7.0",
+    "react-scripts": "3.4.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +39,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
