--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-leaflet": "^2.7.0",
     "react-scripts": "3.4.1",
     "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "request-promise": "^4.2.6",
+    "victory": "^35.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
