--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
+    "d3-format": "^1.4.4",
+    "d3-time-format": "^2.2.3",
     "express": "^4.17.1",
     "leaflet": "^1.6.0",
     "nice-try": "^2.0.1",
