--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
-    "d3-format": "^1.4.4",
     "d3-time-format": "^2.2.3",
     "express": "^4.17.1",
     "leaflet": "^1.6.0",
@@ -18,7 +17,7 @@
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
     "react-scripts": "3.4.1",
-    "react-vis": "^1.11.7",
+    "recharts": "^1.8.5",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
   },
